--- a/src/template.html
+++ b/src/template.html
@@ -111,9 +111,21 @@
     <!-- Wrapper Loader -->
     <div
       id="loaderBox"
-      class="flex flex-row justify-center h-screen items-center bg-gray-700/75 absolute w-full z-50"
+      class="flex flex-col justify-center h-screen items-center bg-gray-700/75 absolute w-full z-50"
     >
-      <span class="loader"></span>
+      <div class="text-animation">
+        <span class="letter" style="--delay: 0;">F</span>
+        <span class="letter" style="--delay: 1;">i</span>
+        <span class="letter" style="--delay: 2;">t</span>
+        <span class="letter" style="--delay: 3;">A</span>
+        <span class="letter" style="--delay: 4;">v</span>
+        <span class="letter" style="--delay: 5;">a</span>
+        <span class="letter" style="--delay: 6;">r</span>
+        <span class="letter" style="--delay: 7;">t</span>
+        <span class="letter" style="--delay: 8;">a</span>
+        <span class="letter" style="--delay: 9;">n</span>
+      </div>
+      <div class="loader"></div>
     </div>
     <!-- Wrapper Settings -->
     <div
